Fix the display of an iframe on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1166,8 +1166,19 @@ section,
 # Research Details Section
 --------------------------------------------------------------*/
 
-iframe {
+iframe.simulation {
   pointer-events: none;
+  width:635px;
+  height:395px;
+}
+
+@media only screen and (max-width: 600px) {
+  iframe.simulation {
+    scale: 0.5;
+    transform: translate(-318px); /* move it back by half of its original width, and then adjust the padding around it be changing the margin */
+    margin-top: -100px;
+    margin-bottom: -100px;
+  }
 }
 
 
